tests/fiaas_deploy_daemon/e2e_expected/tls-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "false"
    kubernetes.io/tls-acme: "true"
  labels:
    app: v3-data-examples-tls-enabled
    fiaas/deployed_by: ""
    fiaas/deployment_id: DEPLOYMENT_ID
    fiaas/version: VERSION
  name: v3-data-examples-tls-enabled
  namespace: default
  ownerReferences: []
  finalizers: []
spec:
  tls:
  - hosts:
    - v3-data-examples-tls-enabled.svc.test.example.com
    secretName: v3-data-examples-tls-enabled.svc.test.example.com
  - hosts:
    - pckqvxryazy6fkalse7zoudilpf43dkb.svc.test.example.com
    - v3-data-examples-tls-enabled.svc.test.example.com
    secretName: v3-data-examples-tls-enabled-ingress-tls
  rules:
  - host: v3-data-examples-tls-enabled.svc.test.example.com
    http:
      paths:
      - backend:
          serviceName: v3-data-examples-tls-enabled
          servicePort: '80'
        path: /
